no longer horizontally align label with JS
- Fixes positioning bugs in all versions of IE due to calculating the wrong horizontal position

--- a/web/cobrands/sass/_dashboard.scss
+++ b/web/cobrands/sass/_dashboard.scss
@@ -95,6 +95,8 @@
         position: absolute;
         margin-top: -1em;
         margin-#{$right}: 0;
+        right: 0;
+        width: 18%;
     }
 }
 
